# FamilyTree

./: .gitignore
backend/: alembic.ini  main.py  migrations.py  pyproject.toml  test.py
backend/authentication/: config.py  crud.py  dependence.py  functions.py  models.py  schemas.py  urls.py
backend/authentication/test/: test_api.py  test_crud.py
backend/core/: additional.py  config.py  decorators.py  dependencies.py  logger.py  middleware.py
backend/core/database/: config.py  constant.py  crud.py  driver.py  migrations.py  models.py
backend/core/email/: config.py  constant.py  driver.py
backend/core/exception/: base_exeption.py  http_exeption.py
backend/login/: urls.py
backend/migrations/: env.py
backend/migrations/versions/: 37149d3fa6a5_init.py  e3b89e57a82e_init.py
backend/tree/: config.py  crud.py  dependence.py  functions.py  models.py  queries.py  schemas.py  urls.py
backend/tree/test/: test_api.py  test_crud.py
backend/user/: config.py  crud.py  dependence.py  models.py  schemas.py  urls.py
backend/user/test/: test_api.py  test_crud.py
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.vue  index.css  main.js
frontend/src/assets/: main.css
frontend/src/plugins/: axios.js  config.js
frontend/src/router/: authorization.js  index.js  workspace.js
frontend/src/store/: authoriazation.js  authorization.js  index.js  notification.js  search.js
frontend/src/stores/: authorization.js  notification.js  search.js  setting.js
frontend/src/views/: Authorization.vue  WorkSpace.vue
(+50 files in other folders)
