[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["evgestrogan <evgestrogan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
uvicorn = "^0.17.5"
pymongo = "^4.0.2"
dnspython = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
